--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Index Page</h1>
         <p> This is the paragraph.</p>
-        <script type="module" src="server.js"></script>
+        <script type="module" src="index.js"></script>
     </body>
 </html>
 
