--- a/documentation.html
+++ b/documentation.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Documentation</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/doc.style.css">
     </head>
     <body>
         <h1>Documentation Page</h1>
